productions/agentkit-cli/archives/0.50.2/en/changelog.mdx
---
title: "Changelog"
zh_link: "/productions/agentkit-cli/archives/0.50.2/zh/changelog"
---

## 0.50.2 - 2026-07-29

- Added BytePlus resource routing to [deployment configuration](/productions/agentkit-cli/archives/0.50.2/en/agentkit-yaml), establishing the base for the complete multi-cloud deployment flow.

## 0.50.1 - 2026-07-29

- Changed Runtime defaults to 2 vCPU, 4 GiB of memory, and one minimum instance; see [`agentkit.yaml`](/productions/agentkit-cli/archives/0.50.2/en/agentkit-yaml#runtime-resources).
- Added [`migrate --project`](/productions/agentkit-cli/archives/0.50.2/en/commands/migrate) for selecting the project used by remote migration.

## 0.50.0 - 2026-07-28

- Added [Auth Admin](/productions/agentkit-cli/archives/0.50.2/en/commands/auth) credential management.
- Added Skill Space references and request-level overrides to [Harness](/productions/agentkit-cli/archives/0.50.2/en/commands/harness).
- Released the revised [sandbox commands](/productions/agentkit-cli/archives/0.50.2/en/commands/sandbox) for configuration, creation, terminal, file, and invocation workflows.

## 0.46.7 - 2026-07-22

- Added remote Dify and arbitrary-source support to [migration](/productions/agentkit-cli/archives/0.50.2/en/commands/migrate).
- Added per-resource region and project overrides plus Runtime private-network settings to [`agentkit.yaml`](/productions/agentkit-cli/archives/0.50.2/en/agentkit-yaml).

## 0.46.6 - 2026-07-19

- Published the AgentKit CLI [command reference](/productions/agentkit-cli/archives/0.50.2/en/commands) and the `agentkit.yaml`-based build and deployment documentation.
